--- a/dashboard/requirements.txt
+++ b/dashboard/requirements.txt
@@ -1,47 +1,42 @@
 annotated-types==0.7.0
-blinker==1.8.2
+blinker==1.9.0
 cachelib==0.9.0
-certifi==2024.2.2
-charset-normalizer==3.3.2
-click==8.1.7
-dash==2.17.0
-dash-bootstrap-components==1.6.0
+certifi==2024.12.14
+charset-normalizer==3.4.1
+click==8.1.8
+dash==2.18.2
+dash-bootstrap-components==1.7.1
 dash-core-components==2.0.0
-dash-extensions==1.0.17
+dash-extensions==1.0.19
 dash-html-components==2.0.0
 dash-table==5.0.0
-dataclass-wizard==0.22.3
-EditorConfig==0.12.4
+dataclass-wizard==0.30.1
+EditorConfig==0.17.0
 Flask==3.0.3
 Flask-Caching==2.3.0
-idna==3.7
-importlib_metadata==7.1.0
+idna==3.10
+importlib_metadata==8.6.1
 itsdangerous==2.2.0
-Jinja2==3.1.4
+Jinja2==3.1.5
 jsbeautifier==1.15.1
-MarkupSafe==2.1.5
-more-itertools==10.3.0
+MarkupSafe==3.0.2
+more-itertools==10.6.0
+narwhals==1.24.1
 nest-asyncio==1.6.0
-numpy==1.26.4
-packaging==24.0
-pandas==2.2.2
-patsy==0.5.6
-plotly==5.22.0
-plotly-express==0.4.1
-pydantic==2.8.2
-pydantic_core==2.20.1
+numpy==2.2.2
+packaging==24.2
+pandas==2.2.3
+plotly==6.0.0
+pydantic==2.10.6
+pydantic_core==2.27.2
 python-dateutil==2.9.0.post0
-pytz==2024.1
-requests==2.32.2
+pytz==2024.2
+requests==2.32.3
 retrying==1.3.4
-ruff==0.4.10
-scipy==1.13.1
-six==1.16.0
-statsmodels==0.14.2
-tenacity==8.3.0
-typing_extensions==4.12.0
-tzdata==2024.1
-urllib3==2.2.1
-websockets==12.0
-Werkzeug==3.0.3
-zipp==3.19.0
+six==1.17.0
+typing_extensions==4.12.2
+tzdata==2025.1
+urllib3==2.3.0
+websockets==14.2
+Werkzeug==3.0.6
+zipp==3.21.0
