--- a/middle_man/requirements.txt
+++ b/middle_man/requirements.txt
@@ -1,21 +1,60 @@
-aiofiles==23.2.1
-asyncio==3.4.3
-blinker==1.8.2
-click==8.1.7
+aiofiles==24.1.0
+annotated-types==0.7.0
+blinker==1.9.0
+cachelib==0.9.0
+certifi==2025.1.31
+charset-normalizer==3.4.1
+click==8.1.8
+dash==2.18.2
+dash-bootstrap-components==1.7.1
+dash-core-components==2.0.0
+dash-extensions==1.0.20
+dash-html-components==2.0.0
+dash-table==5.0.0
+dataclass-wizard==0.30.1
+EditorConfig==0.17.0
+enrich==1.2.7
 Flask==3.0.3
+Flask-Caching==2.3.0
 h11==0.14.0
-h2==4.1.0
-hpack==4.0.0
+h2==4.2.0
+hpack==4.1.0
 Hypercorn==0.17.3
-hyperframe==6.0.1
+hyperframe==6.1.0
+idna==3.10
+importlib_metadata==8.6.1
 itsdangerous==2.2.0
-Jinja2==3.1.4
-MarkupSafe==2.1.5
-packaging==24.1
-plotly==5.22.0
+Jinja2==3.1.5
+jsbeautifier==1.15.3
+markdown-it-py==3.0.0
+MarkupSafe==3.0.2
+mdurl==0.1.2
+more-itertools==10.6.0
+narwhals==1.27.1
+nest-asyncio==1.6.0
+numpy==2.2.3
+packaging==24.2
+pandas==2.2.3
+patsy==1.0.1
+plotly==6.0.0
+plotly-express==0.4.1
 priority==2.0.0
-Quart==0.19.6
-tenacity==8.4.1
-websockets==12.0
-Werkzeug==3.0.3
+pydantic==2.10.6
+pydantic_core==2.27.2
+Pygments==2.19.1
+python-dateutil==2.9.0.post0
+pytz==2025.1
+Quart==0.20.0
+requests==2.32.3
+retrying==1.3.4
+rich==13.9.4
+scipy==1.15.2
+setuptools==75.8.0
+six==1.17.0
+statsmodels==0.14.4
+typing_extensions==4.12.2
+tzdata==2025.1
+urllib3==2.3.0
+Werkzeug==3.0.6
 wsproto==1.2.0
+zipp==3.21.0
